# lnuElytra

./: .gitattributes  .gitignore  Cargo.toml  README.md  lnu_elytra.pyi  package.json  pyproject.toml
.github/workflows/: CI.yml  release-python.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/tutorial/: interface.md  jxb.md  python.md  rust.md  what-is-lnuElytra.md
examples/: Cargo.toml
lnu-elytra/: Cargo.toml
lnu-elytra/src/: error.rs  lib.rs
lnu-elytra/src/method/: init.rs  select_course.rs
src/: blocking.rs  course.rs  lib.rs  method.rs  pyo3.rs  utils.rs
src/method/: fetch_course.rs  init.rs  login.rs  select_course.rs
