[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "lnu_elytra"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
description = "LNU 岭南师范学院 正方教务系统 抢课 选课工具"
urls = { "Source" = "https://github.com/mcitem/lnuElytra", "Documentation" = "https://lnu-elytra.mcitem.net" }
license = { file = "LICENSE" }
keywords = ["lnu", "岭师", "岭南师范学院", "正方教务系统", "抢课", "选课"]
