[package]
name = "lnu-elytra"
version = "0.0.0-v2026.3.5"
edition = "2024"

license = "AGPL-3.0"
repository = "https://github.com/mcitem/lnuElytra"
description = "LNU 岭南师范学院 正方教务系统 抢课 选课工具"


[dependencies]
thiserror = "2.0.18"

hex = "0.4.3"
rsa = "0.9.10"
rand = "0.8.5"
base64 = "0.22.1"

serde = { version = "1.0.228", features = ["derive"] }
scraper = { version = "0.25.0", features = ["atomic"] }
reqwest = { version = "0.13.2", features = [
    "cookies",
    "form",
    "json",
    "query",
], default-features = false }
